--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(154, 215, 255);
+    font-family: 'Be Vietnam Pro', sans-serif;
+    background-color: rgb(230, 246, 255);
 }
 
 header{
@@ -25,6 +28,20 @@ nav{
     align-items: center;
 }
 
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container{
+    width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 a{
     padding: 1.5em;
     text-decoration: none;
@@ -37,15 +54,35 @@ a{
     width: 15px;
 }
 
-#MinhaImagem{
-    float: right;
-    padding-right: 8em;
-    margin-top: 15em;
-}
+
 #eu{
-   align-items: left;
-   height: 350px;
+   height: 300px;
    width: 300px;
    border-radius: 50%;
    object-fit: cover;
+   margin-right: 8em;
+}
+
+#texto{
+    width: 30em;
+    color: rgb(68, 68, 170);
+}
+
+#paragrafo_um{
+    padding-top: 20px;
+    padding-bottom: 1.2em;
+    font-weight: 600;
+    color: rgb(56, 29, 29);
+    font-size: medium;
+}
+
+#botao_contrato{
+    background-color: rgb(255, 99, 82);
+    color: white;
+    border-radius: 0.3em;
+    width: 8em;
+    height: 2.5em;
+    font-weight: 300;
+    cursor: pointer;
+    border: 1px solid black;
 }
