--- a/style.css
+++ b/style.css
@@ -35,18 +35,20 @@ nav{
     height: 100vh;
 }
 
-.container{
-    width: 1200px;
+.main-container{
+    max-width: 1200px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+
 a{
     padding: 1.5em;
     text-decoration: none;
     color: black;
-
+    
 }
 
 .engrenagens{
@@ -56,11 +58,11 @@ a{
 
 
 #eu{
-   height: 350px;
-   width: 300px;
-   border-radius: 50%;
-   object-fit: cover;
-   margin-right: 8em;
+    height: 350px;
+    width: 300px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 8em;
 }
 
 #texto{
@@ -86,3 +88,41 @@ a{
     cursor: pointer;
     border: 1px solid black;
 }
+
+.container{
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.text-center{
+    text-align: center;
+    color: rgb(255, 99, 82);
+    font-size: 2.3em;
+    font-weight: 500;
+}
+
+#sub_skills{
+    padding-top: 6.8em;
+    font-weight: 200;
+    font-size: 1.3em;
+}
+
+#lists{
+    padding-top: 2em;
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+}
+
+.list-row{
+    display: flex;
+    gap: 5em;
+}
+.hexagono{
+    width: 4em;
+    height: 4em;
+}
+
+
+
