--- a/style.css
+++ b/style.css
@@ -228,23 +228,66 @@ a{
 
 }
 
-
-#forms{
-    display: flex;
-    flex-direction: column;
-}
-
-#text-center-contact{
+.title-contact{
     text-align: left;
-    color: rgb(255, 99, 82) !important;
+    color: rgb(255, 99, 82);
     font-size: 2.3em;
     font-weight: 500;
 }
 
-.form-input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+
+#forms-container{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    width: 500px;
+    align-items: center;
+    
 }
+
+input[type="email" i]{
+    width: 100%;
+    height: 50px;
+    border: 2px solid #ccc;
+}
+
+input[type="message" i] {
+    width: 100%;
+    height: 200px;
+    border:2px solid #ccc;
+
+}
+
+input[type="message" i],
+input[type="email" i],
+textarea {
+    padding-left: 15px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.262)
+}
+
+#button-form{
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: rgb(52, 61, 104);
+    width: 400px;
+    height: 50px;
+    border-radius: 2%;
+    box-shadow: none;
+    border: none;
+    font-size: 18px;
+    font-weight: 100;
+}
+
+#button-form .bx.bxs-paper-plane {
+    padding-left: 10px;
+    color: rgb(84, 191, 233); 
+}
+
+#contact-image{
+    padding-left: 30px;
+    margin-top: 40px;
+    height: auto;
+    width: 400px;
+}
+
