--- a/style.css
+++ b/style.css
@@ -186,6 +186,8 @@ a{
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 70px
+
 
 }
 
@@ -225,6 +227,7 @@ a{
     display: flex;
     justify-content: space-between;
     align-content: center;
+    
 
 }
 
@@ -292,13 +295,13 @@ textarea {
 }
 
 #footer-container{
+    position: relative;
     display: block;
     width: 100%;
     bottom: 0;
 }
 
 #wave {
-    display: flex;
     width: 100%;
     height: auto;
     bottom: 0;
@@ -306,9 +309,39 @@ textarea {
 }
 
 
-
-#socials-container{
-    display: flex: 300px;
-
+#socials-container {
+    position: absolute;
+    width: 100%;
+    bottom: 30px;
+    z-index: 10;
+    display: flex;
+    justify-content: space-around;
 }
 
+
+#socials-container-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.social-media{
+    color: white;
+    justify-content: space-between;
+    padding: 0;
+    margin-right: 50px;
+    font-size: 30px;
+}
+
+#social-media-container{
+    margin-top: 27px;
+}
+
+#title-social{
+    color: white;
+    font-weight: 100;
+}
+
+#github-container{
+    display: flex;
+}
